<resources>
    <string name="app_name">demo_diplom</string>
    <string name="action_settings">Настройки</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="clear"><![CDATA[<-]]></string>
    <string name="textErrorPassword">Пароль неверный!</string>
    <string name="numberZero" translatable="false">0</string>
    <string name="numberOne" translatable="false">1</string>
    <string name="numberTwo" translatable="false">2</string>
    <string name="numberThree" translatable="false">3</string>
    <string name="numberFour" translatable="false">4</string>
    <string name="numberFive" translatable="false">5</string>
    <string name="numberSix" translatable="false">6</string>
    <string name="numberSeven" translatable="false">7</string>
    <string name="numberEight" translatable="false">8</string>
    <string name="numberNine" translatable="false">9</string>
    <string name="textViewNewPassword">Введите новый пароль:</string>
    <string name="textButtonSavePassword">Сохранить</string>
    <string name="editTextHintPassword">Введите новый пароль</string>
    <string name="textMessageSavePassword">Пароль сохранен!</string>
    <string name="textErrorLengthPassword">Пароль должен состоять из 4 цифр!</string>
    <string name="textTitleDialogDeleteNote">Удаление заметки</string>
    <string name="textQuestionDialogDelete">Вы уверены, что хотите удалить эту заметку?</string>
    <string name="textDialogPositiveButton">Да</string>
    <string name="textDialogNegativeButton">Нет</string>
    <string name="action_note">Заметка</string>
    <string name="textMessageExit">Нажмите еще раз, чтобы выйти!</string>
    <string name="symbolSeparationValues" translatable="false">;</string>
    <string name="textMessageCreateDefaultNotes">Создание тестовых заметок!</string>
    <string name="textErrorMessageSaveNote">Для сохранения: тело заметки не должно быть пустым!</string>
    <string name="textMessageSaveNote">Заметка сохранена!</string>
    <string name="textMessageUpdateNote">Заметка обнавлена!</string>
    <string name="formatDate" translatable="false">dd.MM.yyyy</string>
    <string name="title_settings">Enter new pin:</string>
    <string name="save_pin">save</string>
    <string name="hint_edit_text_settings">Введите пинкод</string>
    <string name="enter_pin">Enter pin:</string>
    <string name="dialog_title">Внимание</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="day_deadline">День дедлайна</string>
    <string name="dateDeadline"></string>
    <string name="todo">TODO</string>
    <string name="title">Заголовок</string>
    <string name="subtitle">Тело заметки</string>
    <string name="deadline">Дедлайн</string>
    <string name="todo">TODO</string>


</resources>
