<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <GridLayout
        android:id="@+id/keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:columnCount="3"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ovals">

        <Button
            android:id="@+id/btn_one"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:background="#5DD314"
            android:text="@string/one" />

        <Button
            android:id="@+id/btn_two"
            android:text="@string/two"
            android:background="#5DD314"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_three"
            android:text="@string/three"
            android:background="#5DD314"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_four"
            android:text="@string/four"
            android:background="#5DD314"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_five"
            android:text="@string/five"
            android:background="#5DD314"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_six"
            android:text="@string/six"
            android:background="#5DD314"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_seven"
            android:text="@string/seven"
            android:background="#5DD314"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_eight"
            android:text="@string/eight"
            android:background="#5DD314"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_nine"
            android:text="@string/nine"
            android:background="#5DD314"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_zero"
            android:text="@string/zero"
            android:background="#5DD314"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_clear"
            android:text="@string/clear"
            android:background="#5DD314"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="10dp"
            android:layout_height="10dp" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/ovals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_pin">

        <View
            android:id="@+id/oval_1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/circle" />

        <View
            android:layout_width="50dp"
            android:layout_height="1dp" />

        <View
            android:id="@+id/oval_2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/circle" />

        <View
            android:layout_width="50dp"
            android:layout_height="1dp" />

        <View
            android:id="@+id/oval_3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/circle" />

        <View
            android:layout_width="50dp"
            android:layout_height="1dp" />

        <View
            android:id="@+id/oval_4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/circle" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:text="@string/enter_pin"
        android:textColor="#3A9DDA"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>