<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NoteActivity"
    android:background="#F8221F1F"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        tools:context=".NoteActivity">

        <EditText
            android:id="@+id/editTextHeadlineNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColorHint="#F7FFFFFF" />

        <EditText
            android:id="@+id/editTextTextNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="top"
            android:hint="@string/subtitle"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="10"
            android:textColorHint="#FCFFFFFF" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/deadlineCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:buttonTint="#DDB525"
            android:text="@string/deadline"
            android:textColor="#F7FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/editTextDataDeadline"
                android:layout_width="312dp"
                android:layout_height="58dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:enabled="false"
                android:hint="@string/day_deadline"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textColorHint="#F8FFFFFF" />

            <ImageButton
                android:id="@+id/buttonCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_event_black_24dp"
                android:contentDescription="@string/todo" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>