<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textStyle="bold|italic"
                android:padding="8dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle"
                android:maxLines="3"
                android:ellipsize="end"
                android:padding="8dp"
                android:visibility="visible"
                style="@style/TextAppearance.MaterialComponents.Body1"/>

            <TextView
                android:id="@+id/dateDeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dateDeadline"
                android:gravity="right"
                android:padding="8dp"
                android:visibility="visible"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>